    to int, for DBAPIs such as pymssql that naively call 
    str() on values.
    
- engine
  - Fixed memory leak in C version of Decimal result
    processor.  [ticket:1978]
    
  - Implemented sequence check capability for the C 
    version of RowProxy, as well as 2.7 style 
    "collections.Sequence" registration for RowProxy.
    [ticket:1871]

- postgresql
  - Single element tuple expressions inside an IN clause
    parenthesize correctly, also from [ticket:1984]
    
  - Ensured every numeric, float, int code, scalar + array,
    are recognized by psycopg2 and pg8000's "numeric" 
    base type. [ticket:1955]

  - Added as_uuid=True flag to the UUID type, will receive
    and return values as Python UUID() objects rather than
    strings.  Currently, the UUID type is only known to 
    work with psycopg2.  [ticket:1956]

  - Fixed bug whereby KeyError would occur with non-ENUM 
    supported PG versions after a pool dispose+recreate
    would occur, [ticket:1989]
    
- mysql
  - Fixed error handling for Jython + zxjdbc, such that 
    has_table() property works again.  Regression from
    0.6.3 (we don't have a Jython buildbot, sorry)
    [ticket:1960]

- sqlite
  - The REFERENCES clause in a CREATE TABLE that includes
    a remote schema to another table with the same schema 
    name now renders the remote name without
    the schema clause, as required by SQLite.  [ticket:1851]

  - On the same theme, the REFERENCES clause in a CREATE TABLE
    that includes a remote schema to a *different* schema
    than that of the parent table doesn't render at all,
    as cross-schema references do not appear to be supported.

- oracle
  - The cx_oracle "decimal detection" logic, which takes place
    for for result set columns with ambiguous numeric characteristics,
    now uses the decimal point character determined by the locale/
    NLS_LANG setting, using an on-first-connect detection of 
    this character.  cx_oracle 5.0.3 or greater is also required